# ai-inference-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  APPROACH.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_batch_schema.py
benchmarks/: README.md
benchmarks/lib/: inference.js  summary.js
benchmarks/results/: load-20260602-235300.json  load-20260602-235300.md  load-20260603-000523.json  load-20260603-000523.md  load-20260603-001255.json  load-20260603-001255.md  smoke-20260602-233545.json  smoke-20260602-233545.md  stress-20260603-003032.json  stress-20260603-003032.md
benchmarks/scripts/: load.js  smoke.js  stress.js
docker/: gateway.Dockerfile  worker.Dockerfile
docs/: architecture.md
observability/grafana/dashboards/: gateway.json  system-overview.json  worker.json
observability/prometheus/: prometheus.yml
src/aiinfra/: __init__.py  config.py  logging.py
src/aiinfra/db/: __init__.py  engine.py  models.py  session.py
tests/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_batch_endpoints.py  test_correlation.py  test_health.py  test_inference_endpoint.py  test_metrics_endpoint.py  test_models_endpoints.py  test_worker_claim.py  test_worker_loop.py  test_worker_processor.py
tests/unit/: test_batch_schemas.py  test_context.py  test_metrics.py  test_pagination.py  test_schemas.py  test_vllm_client.py
(+27 files in other folders)
